--- a/src/views/SignInView.css
+++ b/src/views/SignInView.css
@@ -1,3 +1,14 @@
+.sign-in-page {
+  height: 100vh;
+  background-image: url(/src/imgs/background.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .sign-in {
   position: absolute;
   left: 50%;
