--- a/src/views/SignUpView.css
+++ b/src/views/SignUpView.css
@@ -1,10 +1,22 @@
+.sign-up-page {
+  height: 100vh;
+  background-image: url(/src/imgs/background.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .sign-up {
   position: absolute;
   left: 50%;
   top: 50%;
   width: 90%;
+  margin-top: 10px;
   max-width: 430px;
-  padding: 60px;
+  padding: 30px;
   border-radius: 10px;
   background: rgba(0, 0, 0, 0.85);
   transform: translate(-50%, -50%);
