movies view updoated

--- a/src/views/MoviesView.css
+++ b/src/views/MoviesView.css
@@ -10,17 +10,20 @@
 }
 
 .main-content {
+  display: flex;
   flex: 4;
   padding: 10px;
-  display: flex;
 }
 
 .genre-view {
-  flex: 2;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
   margin-right: 10px;
   border-right: 1px solid #ccc;
 }
 
 .detail-view {
-  flex: 2;
+  flex: 3;
+  padding-left: 10px;
 }
