--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,6 +1,6 @@
 .featured-content-container {
   position: relative;
-  height: 80vh;
+  height: 70vh;
   width: 100%;
   overflow: hidden;
 }
@@ -23,7 +23,6 @@
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
 }
 
-
 .featured-title {
   font-size: 3rem;
   font-weight: bold;
@@ -40,8 +39,13 @@
   line-height: 1.4;
 }
 
-.featured-button {
+.featured-button-container {
+  display: flex;
+  gap: 20px;
   margin-top: 20px;
+}
+
+.featured-button {
   padding: 12px 30px;
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
@@ -51,8 +55,14 @@
   border-radius: 10px;
   cursor: pointer;
   transition: background-color 0.3s;
+  text-decoration: none;
+}
+
+.featured-button a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .featured-button:hover {
-  background-color: rgb(1, 12, 87);
+  background-color: rgb(130, 130, 130);
 }
