--- a/src/views/DetailView.css
+++ b/src/views/DetailView.css
@@ -53,3 +53,31 @@
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
+
+.add-to-cart-button {
+  background-color: #007bff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: white;
+  font-size: 0.9rem;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s;
+  text-align: center;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.add-to-cart-button:hover {
+  background-color: #024d9c;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: white;
+  font-size: 0.9rem;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s;
+  text-align: center;
+  width: 100%;
+  box-sizing: border-box;
+}
