--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -7,7 +7,7 @@
 
 .featured-content {
   position: absolute;
-  top: 0;
+  top: -25px;
   left: 0;
   right: 0;
   bottom: 0;
@@ -26,7 +26,7 @@
 .featured-title {
   font-size: 3rem;
   font-weight: bold;
-  margin: 0;
+  margin-top: 50px;
   padding: 0;
   text-transform: uppercase;
   letter-spacing: 1px;
