--- a/src/views/SignUpView.css
+++ b/src/views/SignUpView.css
@@ -1,5 +1,5 @@
 .sign-up-page {
-  height: 100vh;
+  min-height: 100vh;
   background-image: url(/src/imgs/background.jpg);
   background-position: center;
   background-repeat: no-repeat;
@@ -7,19 +7,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .sign-up {
-  position: absolute;
-  left: 50%;
-  top: 50%;
   width: 90%;
   margin-top: 10px;
   max-width: 430px;
   padding: 30px;
   border-radius: 10px;
   background: rgba(0, 0, 0, 0.85);
-  transform: translate(-50%, -50%);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
